# dictos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  config-nix.bat  config-win.bat  run-tests.sh
cmake/: HunterConfig.cmake  dictosutil.cmake  linux.cmake  mac.cmake  windows.cmake
inc/: all.hpp  literals.hpp  smartptrcast.hpp
inc/async/: GenericCurrentRunnable.hpp  GenericImpl.hpp  GenericRunnable.hpp  RunnableInterface.hpp  block.hpp  current.h  current.hpp  external.hpp
inc/async/lock/: GenericCondition.hpp  GenericGuard.hpp  GenericLock.hpp  GenericLockImpl.hpp  GenericSpinLockImpl.hpp  all.hpp  external.hpp  state.hpp  type.hpp
inc/async/task/: GenericResultTask.hpp  GenericTask.hpp  ManagerInterface.hpp  TaskInterface.hpp  allocate.hpp
inc/async/task/thread/: TaskImpl.hpp  all.hpp  allocate.hpp  global.hpp
inc/async/thread/: LocalImpl.hpp  all2.hpp  global.hpp
inc/config/: Context.h  all.hpp  type.hpp
inc/dev/: Backtrace.hpp  all.hpp  assert.hpp  fatality.h  fatality.hpp
inc/dictos/core/: Count.hpp  Size.hpp  Uuid.hpp  all.hpp  external.hpp  numericCast.hpp  signals.hpp
inc/dictos/core/async/: Callback.hpp  GenericLocal.hpp  GenericRunnable.hpp  Id.hpp  RunnableInterface.hpp  all.hpp  block.hpp  type.hpp
inc/dictos/core/async/lock/: GenericLock.hpp  GenericLockImpl.hpp  GenericMutexLockImpl.hpp  GenericSpinLockImpl.hpp  HasTryLockForTrait.hpp  all.hpp
inc/dictos/core/async/task/: GenericManager.hpp  GenericResultTask.hpp  GenericTask.hpp  TaskInterface.hpp  all.hpp  external.hpp  taskptr.hpp  type.hpp
inc/dictos/core/async/task/thread/: external.hpp  global.h  type.hpp
inc/dictos/core/async/thread/: MainThread.hpp  RunnableImpl.hpp  ThreadImpl.hpp  all.hpp  thread_id.hpp  type.hpp
inc/dictos/core/config/: Context.h  Context.hpp  Option.hpp  Section.hpp  Sections.h  Sections.hpp  all2.hpp  api.h  api.hpp  external.hpp
inc/dictos/core/dev/: BasicSpinLock.hpp  all2.hpp  external.hpp  fatality.hpp
inc/dictos/core/error/: Cancelled.hpp  InvalidCast.hpp  block.hpp  external.hpp
inc/dictos/core/file/: all.hpp  external.hpp  type.hpp
inc/dictos/core/log/: HasLogPrefixTrait.hpp  Logger.hpp  Prefix.hpp  StreamBuffer.hpp  all.hpp  all2.hpp  api.h  api.hpp  global.h  typeName.hpp
inc/dictos/core/memory/: GenericBuffer.hpp  GenericBufferView.hpp  all.hpp  api.hpp  isContiguous.hpp  toString.hpp  type.hpp
inc/dictos/core/memory/heap/: AlignedImpl.hpp
inc/dictos/core/plat/: all.hpp  all2.hpp  api.h  api.hpp  current.hpp
inc/dictos/core/string/: CanBeInStreamedTrait.hpp  CanBeOutStreamedTrait.hpp  CanBeStreamedTrait.hpp  HasFromStringTrait.hpp  all.hpp  all2.hpp  append.hpp  external.hpp  fromString.h  fromString.hpp  literals.hpp  prepend.hpp  split.hpp  toHuman.hpp  toNumber.hpp  toString.h  toString.hpp  tokenize.hpp
inc/dictos/core/test/: CatchListener.hpp
inc/dictos/core/time/: all.hpp  stream.hpp  types.hpp
inc/dictos/core/util/: ChildOf.hpp  SharedFromThis.hpp  Throughput.hpp  all.hpp
inc/error/: BadAllocation.hpp  Exception.hpp  InvalidArgument.hpp  NotFound.hpp  RuntimeError.hpp  all.hpp  block.hpp  macros.hpp
inc/file/: external.hpp  literals.hpp
inc/log/: Logger.h  all.hpp  api.hpp  external.hpp  macros.hpp  type.hpp  typeName.hpp
inc/memory/: GenericBuffer.hpp  all.hpp  type.hpp
inc/memory/heap/: SystemImpl.hpp  all.hpp
inc/plat/: linux.hpp  windows.hpp
inc/string/: HasToStringTrait.hpp  all.hpp  api.hpp  enclose.hpp  stream_overloads.hpp  trim.hpp
inc/test/: CatchListener.hpp
inc/time/: external.hpp  types.hpp
inc/util/: CachedShared.hpp  Scope.hpp  all.hpp  external.hpp  macros.hpp
src/log/: Logger.cpp  global.cpp
tests/: CMakeLists.txt  Size.cpp  main.cpp  tests.hpp
tests/async/: Callback.cpp
tests/async/task/: Task.cpp
tests/async/thread/: LockInterfaceTests.hpp  MutexLock.cpp  SpinLock.cpp  Thread.cpp
tests/config/: Context.cpp  Section.cpp
tests/log/: Logger.cpp
tests/memory/: Heap.cpp
tests/string/: all.cpp
tests/util/: Throughput.cpp
